--- a/charts/theia-cloud/templates/instances-ingress.yaml
+++ b/charts/theia-cloud/templates/instances-ingress.yaml
@@ -61,9 +61,15 @@ spec:
     {{- end }}
   {{- else }}
   rules:
+    - host: {{ printf "%s.%s" (tpl .Values.hosts.configuration.instance .) (tpl .Values.hosts.configuration.baseHost .) }}
+      http:
+    {{- range .Values.hosts.allWildcardInstances }}
+    - host: {{ printf "%s%s.%s" (tpl . $) (tpl $.Values.hosts.configuration.instance $) (tpl $.Values.hosts.configuration.baseHost $) | quote }}
+      http:
+    {{- end }}
     {{ range $rule := (lookup "networking.k8s.io/v1" "Ingress" .Release.Namespace (tpl (.Values.ingress.instances.name | toString) .)).spec.rules }}
+    {{ if .http }}
     - host: {{ .host | quote }}
-      {{ if .http }}
       http:
         paths:
           {{ with index .http.paths 0 }}
@@ -75,7 +81,7 @@ spec:
                 port:
                   number: {{ .backend.service.port.number  }}
           {{- end }}
-      {{ end }}
+    {{ end }}
     {{- end }}
   {{- end }}
 {{- end }}
